--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -16,7 +16,12 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">ScottyCrud</a>
                 <div class="collapse navbar-collapse" id="navbarNav">
+
                     <form class="d-flex ms-auto my-lg-0">
+                        <select name="cars">
+                            <option value="volvo">Volvo</option>
+                            <option value="saab">Saab</option>
+                          </select>
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-light" type="submit">Search</button>
                     </form>
