UI: Finished CSS for Home page

--- a/haskread-platform-ui/index.html
+++ b/haskread-platform-ui/index.html
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>HaskRead</title>
 </head>
-<body>
+<body class="has-navbar-fixed-top">
     <script src="./index.js"></script>
 </body>
 </html>
